<resources>
    <string name="app_name">GiziWase</string>
    <string name="capture_button">Capture</string>
    <string name="switch_camera_button">Switch Camera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_welcome_page">Halo People, Raih Tubuh Sehat dan Ideal dengan GiziWise!</string>
    <string name="message_welcome_page">GiziWise adalah aplikasi yang membantu Anda mencapai berat badan ideal dan gaya hidup sehat. Dengan fitur BMI dan prediksi makanan berdasarkan porsi, Anda dapat melacak asupan kalori dan nutrisi dengan mudah.
</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Username</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="DoB">Date of Birth</string>
    <string name="tinggi">Height</string>
    <string name="berat">Weight</string>
    <string name="logout">Log Out</string>
    <string name="email">Email</string>
    <string-array name="gender_options">
        <item>Pilih</item>
        <item>male</item>
        <item>female</item>
    </string-array>
</resources>