<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_activity"
    android:orientation="vertical"
    android:background="@drawable/bgprofil"
    tools:context="com.dicoding.giziwise.profile.ProfileActivity">

    <!-- Scrollable content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:id="@+id/profileText"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp"
                android:background="@drawable/custom_edittext">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_name_value"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/black"
                        android:text="Nama"
                        android:textSize="16sp"
                        android:gravity="start|center"
                        android:paddingStart="8dp"
                        android:background="@drawable/custom_edittext" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/tv_email_value"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/black"
                        android:text="Email"
                        android:textSize="16sp"
                        android:gravity="start|center"
                        android:paddingStart="8dp"
                        android:background="@drawable/custom_edittext" />

                    <TextView
                        android:id="@+id/tv_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/tv_gender_value"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/black"
                        android:text="Gender"
                        android:textSize="16sp"
                        android:gravity="start|center"
                        android:paddingStart="8dp"
                        android:background="@drawable/custom_edittext" />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/DoB"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/tv_date_value"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/black"
                        android:text="Date of Birth"
                        android:textSize="16sp"
                        android:gravity="start|center"
                        android:paddingStart="8dp"
                        android:background="@drawable/custom_edittext" />

                    <TextView
                        android:id="@+id/tv_tinggi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tinggi"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/tv_tinggi_value"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/black"
                        android:text="Height"
                        android:textSize="16sp"
                        android:gravity="start|center"
                        android:paddingStart="8dp"
                        android:background="@drawable/custom_edittext" />

                    <TextView
                        android:id="@+id/tv_berat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/berat"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/tv_berat_value"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/black"
                        android:text="Weight"
                        android:textSize="16sp"
                        android:gravity="start|center"
                        android:paddingStart="8dp"
                        android:background="@drawable/custom_edittext" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="16dp">

                        <Button
                            android:layout_width="300dp"
                            android:layout_height="60dp"
                            android:id="@+id/btn_logout"
                            android:text="@string/logout"
                            android:textSize="18sp"
                            android:backgroundTint="@color/red_500"
                            app:cornerRadius="20dp"/>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/navbarBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/green"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:fabAlignmentMode="center"
            app:fabAnchorMode="cradle"
            app:fabCradleMargin="15dp"
            app:fabCradleRoundedCornerRadius="35dp"
            app:fabCradleVerticalOffset="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/homeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/baseline_home_24_black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Home"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profileBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/baseline_person_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Profile"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>
